removed three platforms and replaced it with multiple. additionally imporoved pilot-detail section in the banner for mobile friendly viewing

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -66,7 +66,7 @@
                 <p><strong>Who can participate:</strong> Individuals or parents of minors with DMD, SMA, or LGMD</p>
                 <p><strong>Time commitment:</strong> 6-month pilot, opt out anytime</p>
                 <p><strong>What you'll gain:</strong> See your medical data visualized, connect with MDA's MOVR team, and accelerate discovery</p>
-                <p><strong>Your choice:</strong> Test one pilot platform or explore all three to compare experiences</p>
+                <p><strong>Your choice:</strong> Test one pilot platform or explore all to compare experiences</p>
             </div>
         </div>
     </section>
@@ -270,7 +270,7 @@
                     <label>
                         <input type="checkbox" name="multiPlatform" value="true">
                         <span class="checkmark"></span>
-                        I'm interested in exploring all three pilot platforms (optional)
+                        I'm interested in exploring multiple pilot platforms (optional)
                     </label>
                 </div>
 
@@ -304,7 +304,7 @@
                     <p><strong>Start here:</strong></p>
                     <p class="enrollment-url-display"><a id="enrollment-link" href="#" target="_blank" class="enrollment-url"></a></p>
                     <p id="multi-platform-note" style="display:none; margin-top: 15px; font-style: italic; color: #155724;">
-                        Since you indicated interest in exploring all pilot platforms, your email will include enrollment links for all three.
+                        Since you indicated interest in exploring all pilot platforms, your email will include enrollment links for all pilot platforms.
                     </p>
                 </div>
 
@@ -348,7 +348,7 @@
             <div class="faq-item">
                 <h3 class="faq-question">Why is MDA running this pilot?</h3>
                 <div class="faq-answer">
-                    <p>We're improving MOVR to better serve families. This pilot helps us learn what tools work best and what features matter most. Your feedback will directly shape the new MOVR experience. We're testing three different pilot platforms to help us select the right partner to build MOVR 2.0.</p>
+                    <p>We're improving MOVR to better serve families. This pilot helps us learn what tools work best and what features matter most. Your feedback will directly shape the new MOVR experience. We're testing multiple different pilot platforms to help us select the right partner to build MOVR 2.0.</p>
                 </div>
             </div>
 
@@ -370,21 +370,21 @@
             <div class="faq-item">
                 <h3 class="faq-question">What will I be asked to do?</h3>
                 <div class="faq-answer">
-                    <p>You'll receive a link to one of three pilot platforms. You'll create an account, explore how it works, enter some medical information (as much as you're comfortable with), and complete a brief feedback survey. Work at your own pace. Most participants spend about 30-45 minutes on initial setup.</p>
+                    <p>You'll receive a link to one of the pilot platforms. You'll create an account, explore how it works, enter some medical information (as much as you're comfortable with), and complete a brief feedback survey. Work at your own pace. Most participants spend about 30-45 minutes on initial setup.</p>
                 </div>
             </div>
 
             <div class="faq-item">
                 <h3 class="faq-question">Which platform will I use?</h3>
                 <div class="faq-answer">
-                    <p>After you sign up, we'll send you a link to one of the three pilot platforms. We're balancing participation across all three so we can fairly evaluate each one. Want to try more than one? During sign-up you can indicate interest in exploring multiple platforms and we'll send you all three links.</p>
+                    <p>After you sign up, we'll send you a link to one of the pilot platforms. We're balancing participation across all pilot platforms so we can fairly evaluate each one. Want to try more than one? During sign-up you can indicate interest in exploring multiple platforms and we'll send you all links.</p>
                 </div>
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question">Can I enroll in all three platforms after I submit the form?</h3>
+                <h3 class="faq-question">Can I enroll in all pilot platforms after I submit the form?</h3>
                 <div class="faq-answer">
-                    <p>Yes! If you've already submitted the form and would like to participate in all three platforms to compare experiences, simply email <a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a> and we'll reach out to you with instructions and enrollment links for the additional platforms.</p>
+                    <p>Yes! If you've already submitted the form and would like to participate in all pilot platforms to compare experiences, simply email <a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a> and we'll reach out to you with instructions and enrollment links for the additional platforms.</p>
                 </div>
             </div>
 
