chore: Repository cleanup and reorganization
Major cleanup and modernization of the OpenMOVR repository structure:

Infrastructure Improvements:
- Created shared header component system with header-loader.js
- Updated index.html and gsoc.html to use shared header component
- Added comprehensive developer documentation page (docs/developer.html)
- Created .github/CODEOWNERS for code ownership management
- Updated CONTRIBUTING.md and BRANCH_STRATEGY.md

Renamed Data Dictionary Viewer:
- Renamed data-dictionary-viewer/ to movr-viewer/
- Updated all internal references and links
- Updated Python processing scripts with relative paths
- Added OpenMOVR header navigation to all viewer pages

Documentation Updates:
- Created docs/developer.html with technical documentation
- Updated email contacts throughout (andre.paredes@ymail.com for technical)
- Updated navigation links to use movr-viewer path
- Improved README and contribution guidelines

Code Quality:
- Removed redundant header HTML duplication
- Centralized header component in components/header.html
- Cleaned up navigation structure
- Updated CODEOWNERS with proper team assignments

This commit represents a clean baseline for future development.

--- a/gsoc.html
+++ b/gsoc.html
@@ -167,32 +167,13 @@
             border-color: var(--primary-blue);
         }
     </style>
+
+    <!-- Load header component -->
+    <script src="js/header-loader.js"></script>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <img src="assets/movr_logo_clean.jpg" alt="OpenMOVR Logo">
-                    <div class="logo-text">
-                        <div class="logo-main">OpenMOVR</div>
-                        <div class="logo-sub">MDA MOVR Open Source Extension</div>
-                    </div>
-                </div>
-                
-                <nav class="nav">
-                    <!-- Navigation will be populated by JavaScript from config.js -->
-                </nav>
-                
-                <div class="header-actions">
-                    <a href="https://www.mda.org/science/movr" class="btn btn-outline" target="_blank">Official MDA MOVR ↗</a>
-                    <a href="#team" class="btn btn-outline">Meet Team</a>
-                    <button class="mobile-menu-toggle">☰</button>
-                </div>
-            </div>
-        </div>
-    </header>
+    <!-- Header Component Placeholder -->
+    <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
     <section class="hero-gsoc">
