--- a/movr-viewer/index.html
+++ b/movr-viewer/index.html
@@ -65,8 +65,17 @@
             opacity: 0.6;
         }
     </style>
+
+    <!-- Load header component -->
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/config.js"></script>
+    <script src="../js/header-loader.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body>
+    <!-- Header Component Placeholder -->
+    <div id="header-placeholder"></div>
+
     <div class="container">
         <h1>MOVR DATA HUB Viewer App <span style="font-weight:400;">(alpha testing)</span></h1>
         <p>
