--- a/movr-viewer/vendor_mapping_viewer.html
+++ b/movr-viewer/vendor_mapping_viewer.html
@@ -396,8 +396,17 @@
             }
         }
     </style>
+
+    <!-- Load header component -->
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/config.js"></script>
+    <script src="../js/header-loader.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body>
+    <!-- Header Component Placeholder -->
+    <div id="header-placeholder"></div>
+
     <div class="container">
         <div class="header">
             <div class="nav-links">
