--- a/index.html
+++ b/index.html
@@ -44,32 +44,13 @@
             yearsExperience: 12
         };
     </script>
+
+    <!-- Load header component -->
+    <script src="js/header-loader.js"></script>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="header-content">
-                <div class="logo">
-                    <img src="assets/movr_logo_clean.jpg" alt="OpenMOVR Logo">
-                    <div class="logo-text">
-                        <div class="logo-main">OpenMOVR</div>
-                        <div class="logo-sub">Open Science for Neuromuscular Research</div>
-                    </div>
-                </div>
-                
-                <nav class="nav">
-                    <!-- Navigation populated by JavaScript from config.js -->
-                </nav>
-                
-                <div class="header-actions">
-                    <a href="https://www.mda.org/science/movr" class="btn btn-outline" target="_blank">Official MDA MOVR ↗</a>
-                    <a href="mailto:mdamovr@mdausa.org" class="btn btn-outline">Contact Team</a>
-                    <button class="mobile-menu-toggle">☰</button>
-                </div>
-            </div>
-        </div>
-    </header>
+    <!-- Header Component Placeholder -->
+    <div id="header-placeholder"></div>
 
     <!-- Hero Section: What is OpenMOVR -->
     <section class="hero">
