fix: Resolve movr-viewer layout issues and standardize docs navigation
Fixes:
- Fixed logo path for movr-viewer subdirectory pages
- Added CSS to prevent header overlap on movr-viewer pages
- Adjusted sidebar positioning to account for header
- Added Developer Docs link to all docs page sidebars
- Standardized navigation across all documentation pages

All docs pages now have consistent sidebar navigation including the new developer.html page.

--- a/movr-viewer/data_dictionary_viewer.html
+++ b/movr-viewer/data_dictionary_viewer.html
@@ -378,6 +378,17 @@
     <script src="../js/config.js"></script>
     <script src="../js/header-loader.js"></script>
     <script src="../js/main.js"></script>
+
+    <style>
+        /* Prevent header overlap with page content */
+        #header-placeholder {
+            margin-bottom: 20px;
+        }
+        /* Adjust sidebar to account for header */
+        .sidebar {
+            top: calc(50% + 40px);
+        }
+    </style>
 </head>
 <body>
     <!-- Header Component Placeholder -->
