--- a/movr-viewer/index.html
+++ b/movr-viewer/index.html
@@ -71,6 +71,13 @@
     <script src="../js/config.js"></script>
     <script src="../js/header-loader.js"></script>
     <script src="../js/main.js"></script>
+
+    <style>
+        /* Prevent header overlap with page content */
+        #header-placeholder {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <!-- Header Component Placeholder -->
