--- a/movr-viewer/data_dictionary_viewer.html
+++ b/movr-viewer/data_dictionary_viewer.html
@@ -24,15 +24,15 @@
             padding: 20px;
         }
         
-        .header {
+        .page-header {
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             margin-bottom: 20px;
         }
-        
-        .header h1 {
+
+        .page-header h1 {
             color: #2c5aa0;
             margin-bottom: 10px;
         }
@@ -395,10 +395,9 @@
     <div id="header-placeholder"></div>
 
     <div class="container">
-        <div class="header">
+        <div class="page-header">
             <div class="nav-links" style="margin-bottom: 15px;">
-                <a href="vendor_mapping_viewer.html" style="color: #2c5aa0; text-decoration: none; margin-right: 20px; font-weight: 500; padding: 8px 16px; border-radius: 4px; border: 1px solid #2c5aa0;">Vendor Mapping →</a>
-                <a href="index.html" style="color: #2c5aa0; text-decoration: none; margin-right: 20px; font-weight: 500; padding: 8px 16px; border-radius: 4px; border: 1px solid #2c5aa0;">Home</a>
+                <a href="index.html" style="color: #2c5aa0; text-decoration: none; font-weight: 500; padding: 8px 16px; border-radius: 4px; border: 1px solid #2c5aa0;">MOVR Viewer Home</a>
             </div>
             <h1>MDA MOVR Data Dictionary</h1>
             <p>Alpha Testing - for reviewing priorities in data dictionary fields and structure</p>
