Add Open Graph meta tags

--- a/movr-viewer/data_dictionary_viewer.html
+++ b/movr-viewer/data_dictionary_viewer.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDA MOVR Data Dictionary Viewer</title>
+    <title>MOVR Data Dictionary Viewer | OpenMOVR</title>
+    <meta name="description" content="OpenMOVR - The MOVR open science initiative. Browse and search MOVR Data Dictionary fields for DMD and SMA clinical research.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://openmovr.github.io/movr-viewer/data_dictionary_viewer.html">
+    <meta property="og:title" content="OpenMOVR | MOVR Data Dictionary Viewer">
+    <meta property="og:description" content="The MOVR open science initiative. Browse and search MOVR Data Dictionary fields for DMD and SMA clinical research.">
+    <meta property="og:image" content="https://openmovr.github.io/assets/movr_logo_clean.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://openmovr.github.io/movr-viewer/data_dictionary_viewer.html">
+    <meta property="twitter:title" content="OpenMOVR | MOVR Data Dictionary Viewer">
+    <meta property="twitter:description" content="The MOVR open science initiative. Browse and search MOVR Data Dictionary fields for DMD and SMA clinical research.">
+    <meta property="twitter:image" content="https://openmovr.github.io/assets/movr_logo_clean.jpg">
+
+    <link rel="icon" type="image/png" href="../assets/movr_logo_clean_nobackground.png">
     <style>
         * {
             margin: 0;
