--- a/movr-viewer/index.html
+++ b/movr-viewer/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOVR Viewer | OpenMOVR</title>
-    <meta name="description" content="MOVR Data Dictionary and Vendor Mapping viewer tools for neuromuscular disease research.">
+    <meta name="description" content="OpenMOVR - The MOVR open science initiative. Data Dictionary and mapping tools for neuromuscular disease research.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://openmovr.github.io/movr-viewer/">
+    <meta property="og:title" content="OpenMOVR | MOVR Viewer">
+    <meta property="og:description" content="The MOVR open science initiative. Data Dictionary and mapping tools for neuromuscular disease research.">
+    <meta property="og:image" content="https://openmovr.github.io/assets/movr_logo_clean.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://openmovr.github.io/movr-viewer/">
+    <meta property="twitter:title" content="OpenMOVR | MOVR Viewer">
+    <meta property="twitter:description" content="The MOVR open science initiative. Data Dictionary and mapping tools for neuromuscular disease research.">
+    <meta property="twitter:image" content="https://openmovr.github.io/assets/movr_logo_clean.jpg">
+
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" type="image/png" href="../assets/movr_logo_clean_nobackground.png">
 
