clinical ops team update

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -56,9 +56,9 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="container">
-            <h1>Help Shape the Future of Rare Disease Research with MOVR 2.0</h1>
-            <p class="subtitle">We're building something transformative—and we want you to be part of it.</p>
-            <p>The Muscular Dystrophy Association (MDA) is launching a limited-time pilot to co-create MOVR 2.0, our next-generation data platform designed with families at the center. This is your opportunity to directly influence how data is collected, visualized, and used to accelerate research and improve care for individuals living with Duchenne Muscular Dystrophy (DMD), Spinal Muscular Atrophy (SMA), or Limb-Girdle Muscular Dystrophy (LGMD).</p>
+            <h1>Help Shape the Future of MOVR: Join the MOVR 2.0 Pilot</h1>
+            <p class="subtitle">Be among the first to explore new tools designed by families, for families.</p>
+            <p>The Muscular Dystrophy Association (MDA) is reimagining MOVR—our national platform that helps families manage medical information for neuromuscular diseases—and we need your input. If you're living with DMD, SMA, or LGMD, you know what it takes to keep track of complex care and coordinate with multiple providers.</p>
             <p>Using powerful technology platforms and your lived experience, we're reimagining what a research platform can be—making it easier to share data, visualize your care journey, and connect with the research that matters most to our community.</p>
             <a href="#join" class="cta-button">Sign Up for MOVR 2.0 Pilot</a>
             
@@ -192,7 +192,7 @@
             <h2>Join the MOVR 2.0 Pilot</h2>
 
             <div class="form-warning-box">
-                <p><strong>⚠️ Enrollment is limited — First-come, first-served</strong></p>
+                <p><strong>Enrollment is limited — First-come, first-served</strong></p>
                 <p>Please submit only 1 form. Questions or want to join all 3 pilot platforms after submitting? Email <a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a></p>
             </div>
 
