added pilot-landing-page espanol

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -51,6 +51,7 @@
         <a href="#how-it-works">How It Works</a>
         <a href="#join">Sign Up</a>
         <a href="#faq">FAQ</a>
+        <a href="index-es.html" style="background: #485CC7; color: white; padding: 8px 16px; border-radius: 4px; font-weight: 600;">Translate to Spanish</a>
     </nav>
 
     <!-- HERO SECTION -->
