index-es.html (spanish edits) small - gestionar to adminstrar

--- a/pilot/index-es.html
+++ b/pilot/index-es.html
@@ -58,8 +58,8 @@
     <section class="hero">
         <div class="container">
             <h1>Ayuda a Dar Forma al Futuro de MOVR: Únete al Piloto MOVR 2.0</h1>
-            <p class="subtitle">Sé de los primeros en explorar nuevas herramientas diseñadas por familias, para familias.</p>
-            <p>La Asociación de Distrofia Muscular (MDA) está reimaginando MOVR—nuestra plataforma nacional que ayuda a las familias a gestionar información médica para enfermedades neuromusculares—y necesitamos tu opinión. Si vives con DMD, SMA o LGMD, sabes lo que se necesita para llevar un registro de cuidados complejos y coordinar con múltiples proveedores.</p>
+            <p class="subtitle">Sé uno de los primeros en explorar nuevas herramientas diseñadas por familias, para familias.</p>
+            <p>La Asociación de Distrofia Muscular (MDA) está reimaginando MOVR—nuestra plataforma nacional que ayuda a las familias a administrar información médica para enfermedades neuromusculares—y necesitamos tu opinión. Si vives con DMD, SMA o LGMD, sabes lo que se necesita para llevar un registro de cuidados complejos y coordinar con múltiples proveedores.</p>
             <p>Usando plataformas tecnológicas potentes y tu experiencia vivida, estamos reimaginando lo que puede ser una plataforma de investigación—haciendo más fácil compartir datos, visualizar tu trayectoria de cuidado y conectarte con la investigación que más importa a nuestra comunidad.</p>
             <a href="#join" class="cta-button">Inscríbete al Piloto MOVR 2.0</a>
             
@@ -76,7 +76,7 @@
     <section class="message-from-team">
         <div class="container">
             <h2>Un Mensaje de Tu Equipo MOVR</h2>
-            <p class="section-intro">Estamos liderando este piloto para reimaginar cómo las familias gestionan los datos de enfermedades neuromusculares. Cuando necesites apoyo, estamos aquí en <strong><a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a></strong>.</p>
+            <p class="section-intro">Estamos liderando este piloto para reimaginar cómo las familias administran los datos de enfermedades neuromusculares. Cuando necesites apoyo, estamos aquí en <strong><a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a></strong>.</p>
 
             <div class="leadership-grid">
                 <!-- Andre's Card -->
@@ -100,7 +100,7 @@
                         <p class="bio-title"><em>Directora de Operaciones Clínicas</em></p>
                     </div>
                 </div>
-                <p><em>"Creemos que las familias merecen mejores herramientas para gestionar trayectorias médicas complejas. Este piloto prueba nuevos enfoques diseñados por la comunidad neuromuscular, para la comunidad neuromuscular. Tu participación da forma directamente al futuro de MOVR."</em></p>
+                <p><em>"Creemos que las familias merecen mejores herramientas para administrar trayectorias médicas complejas. Este piloto prueba nuevos enfoques diseñados por la comunidad neuromuscular, para la comunidad neuromuscular. Tu participación da forma directamente al futuro de MOVR."</em></p>
                 <p><em>"Nos aseguraremos de que tus datos permanezcan seguros, que nuestros socios piloto cumplan con los más altos estándares y que todos los protocolos protejan a los participantes. Cuando el piloto termine, compartiremos nuestros hallazgos y recomendaciones para lo que sigue."</em></p>
 
             </div>
